# Nostalgia-Quest-Pixel-Pioneers

./: CMakeLists.txt  Nostalgia-Quest-Pixel-Pioneers-Technical-Documentation.md  README.MD
src/: main.cpp
src/Components/Base/: ComponentBase.hpp
src/Components/Collidable/: Collidable.hpp
src/Components/Controller/: Controller.hpp
src/Components/Drawable/: Drawable.hpp
src/Components/Movable/: Movable.cpp  Movable.hpp
src/Components/Position/: Position.hpp
src/Components/SpriteSheet/: SpriteSheet.hpp
src/Components/State/: State.hpp
src/Core/: ComponentManager.hpp  ConfigurationManager.hpp  DebugManager.hpp  EntityManager.hpp  EventManager.hpp  InputM.hpp  InputManager.hpp  PhysicsManager.hpp  ResourceManager.hpp  SceneManager.hpp  ScriptingManager.hpp  StateMachine.hpp  SystemManager.hpp  UIManager.hpp
src/Core/ECS/: ECS.hpp
src/Core/Entity/: Entity.cpp  Entity.hpp
src/Core/Event/: Event.cpp  Event.hpp  EventM.cpp  EventM.hpp
src/Core/Map/: Map.cpp  Map.hpp
src/Core/Resource/: Resource.hpp  Resource.inl
src/Core/SpriteSheet/: SpriteSheet.cpp  SpriteSheet.hpp
src/Core/State/: BaseState.hpp  SharedContext.hpp  State.cpp  State.hpp  StateM.cpp  StateM.hpp  StateType.hpp
src/Core/System/: System.cpp  System.hpp
src/Core/Texture/: Texture.cpp  Texture.hpp
src/Core/Tile/: Tile.hpp
src/Core/Window/: Window.cpp  Window.hpp
src/Game/: Game.cpp  Game.hpp
src/Map/Map/: Map.hpp
src/Map/Tile/: Tile.cpp  Tile.hpp
src/States/State_Game/: State_Game.cpp  State_Game.hpp
src/States/State_Intro/: State_Intro.cpp  State_Intro.hpp
src/States/State_MainMenu/: State_MainMenu.cpp  State_MainMenu.hpp
src/States/State_Paused/: State_Paused.cpp  State_Paused.hpp
src/Systems/Base/: SystemBase.cpp  SystemBase.hpp
src/Systems/Control/: Control.cpp  Control.hpp
src/Systems/Movement/: Movement.cpp  Movement.hpp
src/Systems/Renderer/: Renderer.cpp  Renderer.hpp
src/Systems/SheetAnimation/: SheetAnimation.cpp  SheetAnimation.hpp
src/Systems/State/: State.cpp  State.hpp
src/Utilities/: Axis.hpp  Bitmask.hpp  Communicator.hpp  Direction.hpp  EventQueue.hpp  MessageHandler.hpp  Observer.hpp  Utilities.hpp
